# services/bucket_list/src/router.rs
@@ -1,4 +1,9 @@
-use crate::model::{coaster::Coaster, country::Country, manufacturer::Manufacturer, park::Park};
+use crate::model::{
+	coaster::{Coaster, CoasterAndBucketListCount},
+	country::Country,
+	manufacturer::Manufacturer,
+	park::Park,
+};
 use std::sync::Arc;
 
 use aide::{
@@ -35,6 +40,13 @@ pub fn create_router(state: Arc<AppState>) -> Router {
 		.route("/openapi.json", get(get_openapi))
 		.route("/docs", get(Scalar::new("/openapi.json").axum_handler()))
 		.api_route(
+			"/",
+			get_with(
+				get_coasters_and_bucket_list_counts,
+				docs_get_coasters_and_bucket_list_counts,
+			),
+		)
+		.api_route(
 			"/:user_id",
 			get_with(get_coasters, docs_get_coasters)
 				.post_with(add_coaster, docs_add_coaster)
@@ -68,6 +80,130 @@ fn openapi(openapi: TransformOpenApi) -> TransformOpenApi {
 
 async fn get_openapi(Extension(api): Extension<Arc<OpenApi>>) -> Json<Arc<OpenApi>> {
 	return Json(api);
+}
+
+async fn get_coasters_and_bucket_list_counts(
+	State(state): State<Arc<AppState>>,
+) -> Result<Json<Vec<CoasterAndBucketListCount>>, StatusCode> {
+	let store = &state.store;
+
+	let mut result = store
+		.query("SELECT count(), coaster_ids AS coaster_id FROM bucket_list SPLIT coaster_id GROUP BY coaster_id ORDER BY count DESC;")
+		.await
+		.or(Err(StatusCode::INTERNAL_SERVER_ERROR))?;
+
+	#[derive(Debug, Deserialize)]
+	struct CoasterIdAndBucketListCount {
+		coaster_id: u32,
+		count: u32,
+	}
+
+	let coaster_ids_and_bucket_list_counts = result
+		.take::<Vec<CoasterIdAndBucketListCount>>(0)
+		.or(Err(StatusCode::INTERNAL_SERVER_ERROR))?;
+
+	let coasters_and_bucket_list_counts =
+		coaster_ids_and_bucket_list_counts
+			.iter()
+			.map(|coaster_with_count| async {
+				let raw_coaster = CoasterReadCoaster::get_coaster_item()
+					.id(coaster_with_count.coaster_id.to_string())
+					.send(&state.cc_client)
+					.await
+					.or(Err(StatusCode::INTERNAL_SERVER_ERROR))?;
+
+				return Ok(CoasterAndBucketListCount {
+					coaster: Coaster {
+						id: coaster_with_count.coaster_id,
+						name: raw_coaster.name.clone(),
+						speed: raw_coaster.speed.and_then(|speed| Some(speed as u32)),
+						height: raw_coaster.height.and_then(|height| Some(height as u32)),
+						length: raw_coaster.length.and_then(|length| Some(length as u32)),
+						inversions: raw_coaster
+							.inversions_number
+							.and_then(|inversions| Some(inversions as u32)),
+						manufacturer: raw_coaster.manufacturer.clone().and_then(|manufacturer| {
+							Some(Manufacturer {
+								name: manufacturer.name?,
+							})
+						}),
+						park: raw_coaster.park.clone().and_then(|park| {
+							Some(Park {
+								id: park.id,
+								name: park.name?,
+								country: park
+									.country
+									.and_then(|country| Country::from_id(country.name?.as_str())),
+							})
+						}),
+						image: raw_coaster.main_image.clone().and_then(|image| image.path),
+					},
+					bucket_list_count: coaster_with_count.count,
+				});
+			});
+
+	return Ok(Json(
+		join_all(coasters_and_bucket_list_counts)
+			.await
+			.into_iter()
+			.collect::<Result<Vec<CoasterAndBucketListCount>, StatusCode>>()?,
+	));
+}
+
+fn docs_get_coasters_and_bucket_list_counts(operation: TransformOperation) -> TransformOperation {
+	operation
+		.summary("Get Coasters and Bucket List Counts")
+		.description("Get all coasters and the amount of bucket lists they are in")
+		.response_with::<200, Json<Vec<CoasterAndBucketListCount>>, _>(|res| {
+			res.description("List of Coasters and Bucket List Counts")
+				.example(vec![
+					CoasterAndBucketListCount {
+						bucket_list_count: 12,
+						coaster: Coaster {
+							id: 2832,
+							name: "Zadra".to_string(),
+							speed: Some(121),
+							height: Some(63),
+							length: Some(1316),
+							inversions: Some(3),
+							manufacturer: Some(Manufacturer {
+								name: "Rocky Mountain Construction".to_string(),
+							}),
+							park: Some(Park {
+								id: 545,
+								name: "Energylandia".to_string(),
+								country: Some(Country::Poland),
+							}),
+							image: Some(
+								"https://pictures.captaincoaster.com/1440x1440/9f68e5f6-f989-4f0d-a9f8-1330dad339e3.jpg".to_string(),
+							),
+						},
+					},
+					CoasterAndBucketListCount {
+						bucket_list_count: 8,
+						coaster: Coaster {
+							id: 2827,
+							name: "Taiga".to_string(),
+							speed: Some(106),
+							height: Some(52),
+							length: Some(1104),
+							inversions: Some(4),
+							manufacturer: Some(Manufacturer {
+								name: "Intamin".to_string(),
+							}),
+							park: Some(Park {
+								id: 117,
+								name: "Linnanmäki".to_string(),
+								country: Some(Country::Finland),
+							}),
+							image: Some(
+								"https://pictures.captaincoaster.com/1440x1440/9a6ed72f-34c7-4353-bcf5-49fbae03718b.jpeg".to_string(),
+							),
+						},
+					},
+				])
+		})
+		.response_with::<404, (), _>(|res| res.description("Bucket List not found"))
 }
 
 async fn get_coasters(
@@ -127,10 +263,10 @@ async fn get_coasters(
 
 fn docs_get_coasters(operation: TransformOperation) -> TransformOperation {
 	operation
-		.summary("Get all Coasters")
+		.summary("Get Coasters in a Bucket List")
 		.description("Get all coasters in a bucket list")
 		.response_with::<200, Json<Vec<Coaster>>, _>(|res| {
-			res.description("List of Coasters in bucket list").example(
+			res.description("List of Coasters in Bucket List").example(
 				vec![
 					Coaster {
 						id: 2832,
@@ -169,7 +305,7 @@ fn docs_get_coasters(operation: TransformOperation) -> TransformOperation {
 				],
 			)
 		})
-		.response_with::<404, (), _>(|res| res.description("Bucket list not found"))
+		.response_with::<404, (), _>(|res| res.description("Bucket List not found"))
 }
 
 async fn get_coaster(
@@ -228,7 +364,7 @@ fn docs_get_coaster(operation: TransformOperation) -> TransformOperation {
 		.summary("Get a Coaster by index")
 		.description("Get a coaster at a given index in a bucket list")
 		.response_with::<200, Json<Coaster>, _>(|res| {
-			res.description("Coaster in bucket list").example(Coaster {
+			res.description("Coaster in Bucket List").example(Coaster {
 				id: 2827,
 				name: "Taiga".to_string(),
 				speed: Some(106),
@@ -246,7 +382,7 @@ fn docs_get_coaster(operation: TransformOperation) -> TransformOperation {
 				image: Some("https://pictures.captaincoaster.com/1440x1440/9a6ed72f-34c7-4353-bcf5-49fbae03718b.jpeg".to_string()),
 			})
 		})
-		.response_with::<404, (), _>(|res| res.description("Bucket list not found or index out of bounds"))
+		.response_with::<404, (), _>(|res| res.description("Bucket List not found or index out of bounds"))
 }
 
 async fn add_coaster(
@@ -278,9 +414,9 @@ fn docs_add_coaster(operation: TransformOperation) -> TransformOperation {
 		.summary("Add a Coaster")
 		.description("Add a coaster to a bucket list")
 		.security_requirement("jwt")
-		.response_with::<200, (), _>(|res| res.description("Added to bucket list"))
+		.response_with::<200, (), _>(|res| res.description("Added to Bucket List"))
 		.response_with::<401, (), _>(|res| res.description("Unauthorized"))
-		.response_with::<404, (), _>(|res| res.description("Bucket list not found"))
+		.response_with::<404, (), _>(|res| res.description("Bucket List not found"))
 }
 
 async fn insert_coaster(
@@ -313,9 +449,9 @@ fn docs_insert_coaster(operation: TransformOperation) -> TransformOperation {
 		.summary("Insert a Coaster by index")
 		.description("Insert a coaster at a given index into a bucket list")
 		.security_requirement("jwt")
-		.response_with::<200, (), _>(|res| res.description("Inserted into bucket list"))
+		.response_with::<200, (), _>(|res| res.description("Inserted into Bucket List"))
 		.response_with::<401, (), _>(|res| res.description("Unauthorized"))
-		.response_with::<404, (), _>(|res| res.description("Bucket list not found"))
+		.response_with::<404, (), _>(|res| res.description("Bucket List not found"))
 }
 
 async fn set_coasters(
@@ -344,12 +480,12 @@ async fn set_coasters(
 
 fn docs_set_coasters(operation: TransformOperation) -> TransformOperation {
 	operation
-		.summary("Set all Coasters")
+		.summary("Set Coasters in a Bucket List")
 		.description("Set all coasters in a bucket list")
 		.security_requirement("jwt")
-		.response_with::<200, (), _>(|res| res.description("Set bucket list"))
+		.response_with::<200, (), _>(|res| res.description("Set Bucket List"))
 		.response_with::<401, (), _>(|res| res.description("Unauthorized"))
-		.response_with::<404, (), _>(|res| res.description("Bucket list not found"))
+		.response_with::<404, (), _>(|res| res.description("Bucket List not found"))
 }
 
 async fn delete_coaster(
@@ -381,9 +517,9 @@ fn docs_delete_coaster(operation: TransformOperation) -> TransformOperation {
 		.summary("Delete a Coaster by index")
 		.description("Delete a coaster at a given index from a bucket list")
 		.security_requirement("jwt")
-		.response_with::<200, (), _>(|res| res.description("Deleted from bucket list"))
+		.response_with::<200, (), _>(|res| res.description("Deleted from Bucket List"))
 		.response_with::<401, (), _>(|res| res.description("Unauthorized"))
 		.response_with::<404, (), _>(|res| {
-			res.description("Bucket list not found or index out of bounds")
+			res.description("Bucket List not found or index out of bounds")
 		})
 }
